# igvc_software_2020

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: igvc_compile_test.yml
firmware/: README.md
firmware/gps/: ArduinoJSON.h  TinyGPSPlus.cpp  TinyGPSPlus.h  main.cpp
firmware/motor_driver/: ArduinoJson.h  IGVCMotor.h  main.cpp
firmware/safety/RemoteControl/: RemoteControl.ino  credentials.h
firmware/safety/SafetyCutoff/: SafetyCutoff.ino  credentials.h
igvc_ws/: accel_log.csv  export.csv  vel_log.csv
igvc_ws/src/igvc_ekf/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_launch/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_msgs/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_nav/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_ros_navigation/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_vision/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_vision/LaneDetection/: LineDetection.py  camera_info.py  output.avi
igvc_ws/src/igvc_vision/launch/: lane_detection.launch  vision.launch
igvc_ws/src/igvc_vision/src/: kinect_node.py  kinect_test.py  lane_finder.py  lidar.cpp  lidar_node.cpp
igvc_ws/src/igvc_vision/src/CV_to_Map/: CV_to_Map.py  CV_to_Map_python2.py  requirements.txt
igvc_ws/src/igvc_vision/src/LaneDetection/: LineDetection.py  camera_info.py  line_test.py
sensors/: GPSData.csv  gps.R
setup/: common.sh  deps.sh  dev_setup.sh  igvc.deps  igvc.rules  requirements.txt  robot_setup.sh  run.sh  simulator.sh
setup/etc/: 51-kinect.rules  igvc  igvc.rules
setup/igvc_dev/: igvc_deps  igvc_make
(+135 files in other folders)
