<?xml version="1.0"?>
<package format="2">
  <name>igvc_vision</name>
  <version>0.0.1</version>
  <description>The igvc_vision package contains nodes regarding any sort of robotic vision, including rgb cameras, depth cameras, and lidar.</description>
  <license>MIT</license>
  <url type="website">http://ou.edu/scr/</url>

  <maintainer email="noah.zemlin@ou.edu">Noah Zemlin</maintainer>
  <author email="noah.zemlin@ou.edu">Noah Zemlin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
